fix contrast issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,6 +109,7 @@ body {
 
 .upgrades__item-link {
   font-size: .9rem;
+  color: black;
 }
 
 @media (min-width: 768px) {
